--- a/Shoe-shop/src/main/resources/application.properties
+++ b/Shoe-shop/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/shoe-shop?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/shoe-shop-pro?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Ptl451996
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+logging.level.org.springframework.web=DEBUG
 
