--- a/Shoe-Shop-LinhPT/Shoe-Shop/package.json
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/package.json
@@ -15,11 +15,16 @@
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.0.9",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "firebase": "^8.10.0",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.7.2",
+    "toastr": "^2.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
