--- a/Shoe-shop/src/main/resources/application.properties
+++ b/Shoe-shop/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/shoe-shop-pro?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/Linh-Project?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Ptl451996
 spring.jpa.hibernate.ddl-auto=update
