--- a/Shoe-Shop-LinhPT/Shoe-Shop/package.json
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "creditcardpayments": "^1.0.3",
     "firebase": "^8.10.0",
+    "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^13.2.1",
+    "paypal-rest-sdk": "^1.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
