--- a/Shoe-Shop-LinhPT/Shoe-Shop/package.json
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/package.json
@@ -26,6 +26,7 @@
     "firebase": "^8.10.0",
     "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^13.2.1",
+    "nodemailer": "^6.9.1",
     "paypal-rest-sdk": "^1.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -37,6 +38,7 @@
     "@angular/compiler-cli": "~11.0.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/nodemailer": "^6.4.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
