--- a/Shoe-shop-back-end/src/main/resources/application.properties
+++ b/Shoe-shop-back-end/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.password=Ptl451996
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.springframework.web=DEBUG
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=skyfreedom45@gmail.com
+spring.mail.password=dtncshcmhstb45
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
